--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "homepage": "https://mohsinsackeer.github.io/my-portfolio/",
+    "homepage": "https://mohsinsackeer.github.io/my-portfolio",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
